unpackaged/objects/copado__Selenium_Test_Run__c.object
<CustomObject>
	<description>Created test script for your saved case !!!</description>
	<fields>
		<fullName>copado__Base_URL__c</fullName>
		<description>Optional Base URL where this test will be run, if Credentials are not specified.</description>
		<inlineHelpText>Optional Base URL where this test will be run, if Credentials are not specified.</inlineHelpText>
		<label>Base URL</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__Batch_No__c</fullName>
		<defaultValue>1</defaultValue>
		<label>Batch No.</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<formula>copado__Org_Credential__r.copado__Environment__r.Name</formula>
		<label>Environment</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__External_ID__c</fullName>
		<externalId>true</externalId>
		<label>External ID</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__Last_Status_Date__c</fullName>
		<label>Last Status Date</label>
		<summarizedField>copado__Selenium_Test_Result__c.LastModifiedDate</summarizedField>
		<summaryForeignKey>copado__Selenium_Test_Result__c.copado__Selenium_Test_Run__c</summaryForeignKey>
		<summaryOperation>max</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>copado__Last_Status_Icon__c</fullName>
		<formula>IMAGE( 
CASE(TEXT(copado__Last_Status__c), 

&apos;Completed with errors&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Completed successfully&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,

&apos;Completed with warnings&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,


&apos;In Progress&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;Queued&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;/s.gif&apos;),

TEXT(copado__Last_Status__c) 
)</formula>
		<label>Last Status Icon</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Last_Status__c</fullName>
		<label>Last Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Queued</fullName>
					<color>#BBBBBB</color>
					<default>true</default>
					<label>Queued</label>
				</value>
				<value>
					<fullName>Starting</fullName>
					<color>#999999</color>
					<label>Starting</label>
				</value>
				<value>
					<fullName>In Progress</fullName>
					<color>#0B6FCE</color>
					<label>In Progress</label>
				</value>
				<value>
					<fullName>Completed successfully</fullName>
					<color>#009900</color>
					<label>Completed successfully</label>
				</value>
				<value>
					<fullName>Completed with errors</fullName>
					<color>#CC0000</color>
					<label>Completed with errors</label>
				</value>
				<value>
					<fullName>Provider Failure</fullName>
					<color>#FF6666</color>
					<label>Provider Failure</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>Copado will log in to Salesforce using this Credential.  There is no need to record username and password of the Salesforce login page.</inlineHelpText>
		<label>Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Selenium Test Runs</relationshipLabel>
		<relationshipName>SeleniumTestRuns</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Settings__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<inlineHelpText>Copado will run the Test Suites for each of the selected Platforms in these Settings.</inlineHelpText>
		<label>Selenium Settings</label>
		<referenceTo>copado__Selenium_Settings__c</referenceTo>
		<relationshipLabel>Selenium Test Runs</relationshipLabel>
		<relationshipName>Selenium_Test_Runs</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Group__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<inlineHelpText>This field should not be populated.  The value is automatically maintained.</inlineHelpText>
		<label>Selenium Test Group</label>
		<lookupFilter>
			<active>true</active>
			<filterItems>
				<field>copado__Selenium_Test_Group__c.copado__Manage_Test_Runs_manually__c</field>
				<operation>equals</operation>
				<value>True</value>
			</filterItems>
			<isOptional>true</isOptional>
		</lookupFilter>
		<referenceTo>copado__Selenium_Test_Group__c</referenceTo>
		<relationshipLabel>Selenium Test Runs</relationshipLabel>
		<relationshipName>Selenium_Test_Runs</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Suite__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Selenium Test Suite</label>
		<referenceTo>copado__Selenium_Test_Suite__c</referenceTo>
		<relationshipLabel>Selenium Test Runs</relationshipLabel>
		<relationshipName>Selenium_Test_Runs</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<label>Selenium Test Run</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Selenium_Test_Suite__c</columns>
		<columns>copado__Org_Credential__c</columns>
		<columns>copado__Selenium_Settings__c</columns>
		<columns>UPDATEDBY_USER</columns>
		<columns>copado__Last_Status_Icon__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Selenium Test Run Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Selenium Test Runs</pluralLabel>
	<recordTypes>
		<fullName>copado__Generic_Web_Application</fullName>
		<active>true</active>
		<description>Test a generic web application</description>
		<label>Generic Web Application</label>
	</recordTypes>
	<recordTypes>
		<fullName>copado__Salesforce</fullName>
		<active>true</active>
		<description>Test a Salesforce Org using OAuth Authentication</description>
		<label>Salesforce</label>
	</recordTypes>
	<sharingModel>ReadWrite</sharingModel>
	<validationRules>
		<fullName>copado__Credentials_or_BaseURL</fullName>
		<active>true</active>
		<description>Base url cannot be set if credentials is defined</description>
		<errorConditionFormula>NOT(ISBLANK(copado__Org_Credential__c)) &amp;&amp; NOT(ISBLANK(copado__Base_URL__c))</errorConditionFormula>
		<errorMessage>Base URL cannot be populated if Credentials were selected.</errorMessage>
	</validationRules>
</CustomObject>